--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "dependencies": {
     "expo": "^23.0.4",
+    "numeral": "^2.0.6",
     "react": "16.0.0",
-    "react-native": "0.50.3"
+    "react-native": "0.50.3",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
